Python is included

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Contagion)
 
 # Compiler settings 
 set (CMAKE_CXX_COMPILER clang)
-ADD_DEFINITIONS(-std=c++1y -stdlib=libc++ )
+
 set(CMAKE_PREFIX_PATH $ENV{QTDIR})
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -14,7 +14,11 @@ find_package(Qt5Widgets)
 find_package(Qt5Gui)
 find_package(PythonLibs REQUIRED)
 find_package(Boost COMPONENTS python filesystem system REQUIRED)
-message( ${Boost_LIBRARIES})
+SET(PYTHON_INCLUDE_PATH /usr/include/python3.4m)
+SET(PYTHON_INCLUDE_DIR  /usr/include/python3.4m)
+#SET(Boost_USE_STATIC_LIBS OFF)
+#SET(Boost_USE_MULTITHREADED ON)
+#SET(Boost_USE_STATIC_RUNTIME OFF)
 
 # Define SOURCES 
 set(CONTAGION_SOURCES 
@@ -29,6 +33,7 @@ mainwindow.cpp
 moderator.cpp
 randomplayer.cpp)
 
+ADD_DEFINITIONS(-std=c++11 -stdlib=libc++ -I ${PYTHON_INCLUDE_PATH})
 # Tell CMake to create the helloworld executable
 add_executable(contagion  ${CONTAGION_SOURCES} Tasks.txt)
 
